--- a/work.html
+++ b/work.html
@@ -6,7 +6,13 @@
     <h1 class="heading">Johns Workspace</h1>
     <br>
       <h2 class="text">This is my workspace</h2>
-      <p class="text">This is where i'll log all* of my work</p>
+      <br>
+      <p class="text">This is where i'll log all of my work</p>
+      </br>
+      <img src="IMG_0379.JPG" alt="A picture of a wild Simon">
     </br>
+    <p class="link">
+      Click <a href="https://github.com/GoGoBendy">here</a> to see my github profile page.
+    </p>
   </body>
 </html>
