--- a/workpage.html
+++ b/workpage.html
@@ -1,9 +1,19 @@
 <html>
   <head>
-    <link rel="stylesheet" href="second.css">
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <img src="C:\Users\john.gale.00\OneDrive - Department for Education, Children and Young People\M drive\Photos\Humans being werid\People i know\simon and james\IMG_1602.JPG" alt="James pushing Simon on a swing
-    <p class="back">Click <a href="Untitled-1.html">here</a> to go back</p>
+    <h1 class="heading">Johns Workspace</h1>
+    <br>
+      <h2 class="text">This is my workspace</h2>
+      <br>
+      <p class="text">This is where i'll log all of my work</p>
+      </br>
+      <img src="C:\Users\john.gale.00\OneDrive - Department for Education, Children and Young People\M drive\Photos\Humans being werid\People i know\Simon\IMG_0379.JPG" alt="A picture of a wild Simon">
+    </br>
+    <p class="link">
+      Click <a href="https://github.com/GoGoBendy">here</a> to see my github profile page.
+      <br> Click <a href="workpage.html">here</a> to go to another page </br>
+    </p>
   </body>
 </html>
