--- a/term-1.html
+++ b/term-1.html
@@ -1,9 +1,11 @@
 <html>
   <head>
-    <link rel="stylesheet" href="term-1.css">
+    <link rel="stylesheet" href="term-one.css">
   </head>
   <body>
-    <img src="C:\Users\john.gale.00\OneDrive - Department for Education, Children and Young People\M drive\Photos\scene\IMG_1599.JPG" alt="Trees flanking some rocks in the water">
+    <h1>Term One</h1>
+    <img src="IMG_2499.JPG" alt="Trees flanking some rocks in the water">
+    <p>During term one we did the <a href="https://bebraschallenge.org/">Bebras Computing Challenge</a> as well as going on with some work on <a href="https://groklearning.com/">Grok Learning</a></p>
     <p class="back">Click <a href="workpage.html">here</a> to go back</p>
   </body>
 </html>
