--- a/workpage.html
+++ b/workpage.html
@@ -3,17 +3,9 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1 class="heading">Johns Workspace</h1>
-    <br>
-      <h2 class="text">This is my workspace</h2>
-      <br>
-      <p class="text">This is where i'll log all of my work</p>
-      </br>
-      <img src="C:\Users\john.gale.00\OneDrive - Department for Education, Children and Young People\M drive\Photos\Humans being werid\People i know\Simon\IMG_0379.JPG" alt="A picture of a wild Simon">
-    </br>
-    <p class="link">
-      Click <a href="https://github.com/GoGoBendy">here</a> to see my github profile page.
-      <br> Click <a href="workpage.html">here</a> to go to another page </br>
-    </p>
+    <h1>This is where i'll sort what work i've done</h1>
+    <h2>I'll sort it by spliting it into what term i did it in</h2>
+    <p><a href="term-1.html">Term 1</a><br></br><a href="term-2.html">Term 2</a><br></br><a href="term-3.html">Term 3</a><br></br><a href="term-4.html">Term 4</a></p>
+    <p>Click<a href="work.html"> here </a>to go back</p>
   </body>
 </html>
