--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
     </br>
     <p class="link">
       Click <a href="https://github.com/GoGoBendy">here</a> to see my github profile page.
-      <br> Click <a href="workpage.html">here</a> to go to another page </br>
+      <br> Click <a href="year.html">here</a> to go to another page </br>
     </p>
   </body>
 </html>
