--- a/term-2.html
+++ b/term-2.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Term Two</h1>
-    <p>During term 2 we created robots to go around a course following black lines, defeating obstacles and </p>
+    <p>During term 2 we created lego robots to go around a course following black lines, defeating obstacles and grabing a can to save from a chemical spill</p>
     <p class="back">Click <a href="workpage.html">here</a> to go back</p>
   </body>
 </html>
