--- a/workpage.html
+++ b/workpage.html
@@ -8,5 +8,13 @@
     <p><a href="term-1.html">Term 1</a><br></br><a href="term-2.html">Term 2</a><br></br><a href="term-3.html">Term 3</a><br></br><a href="term-4.html">Term 4</a></p>
     <br></br>
     <p>Click<a href="year.html"> here </a>to go back</p>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <br></br>
+    <h25>easter egg lol</h25>
   </body>
 </html>
