--- a/year.html
+++ b/year.html
@@ -1,11 +1,12 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="year.css">
   </head>
   <body>
     <h1>This is where i'll sort what work i've done into years</h1>
     <p> Click <a href="workpage.html">here</a> to go to work from 2022</p> 
-    <p>Click<a href="work.html"> here </a>to go back</p>
+    <p>Click<a href="index.html"> here </a>to go back</p>
     <input type="text" id="feedback" name="feedback">
   </body>
 </html>
