--- a/year.html
+++ b/year.html
@@ -6,7 +6,8 @@
   <body>
     <h1>This is where i'll sort what work i've done into years</h1>
     <p> Click <a href="workpage.html">here</a> to go to work from 2022</p> 
-    <p>Click<a href="index.html"> here </a>to go back</p>
     <input type="text" id="feedback" name="feedback">
+    <input class="button" type="submit" value="Send feedback">
+    <p>Click<a href="index.html"> here </a>to go back</p>
   </body>
 </html>
